# cntimer

./: LICENSE  MANIFEST.in  README.md  cntimer.pth  pyproject.toml  setup.py
cntimer/: __init__.py  _autostart.py  cli.py  tracker.py
